--- a/index.html
+++ b/index.html
@@ -1,52 +1,55 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Success Trajectories Chart</title>
-    <style>
-        body { font-family: Arial, sans-serif; padding: 15px; }
-        .controls { margin-bottom: 10px; }
-        .controls input { width: 60px; margin-right: 10px; }
-        button { margin-right: 10px; margin-top: 5px; }
-        #chartsContainer { display: flex; gap: 20px; align-items: flex-start; }
-
-        .chartWrapper {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        canvas { background-color: #f9f9f9; }
-        .chartLabel { margin-bottom: 5px; font-weight: bold; }
-    </style>
+  <meta charset="utf-8" />
+  <title>Success Trajectories Chart</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <!-- Chart.js via CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <style>
+    body { font-family: Arial, Helvetica, sans-serif; padding: 14px; }
+    h1 { font-size: 20px; margin: 0 0 8px 0; }
+    .controls { margin: 8px 0 14px 0; display:flex; gap:12px; align-items:center; flex-wrap:wrap; }
+    input[type=number] { width:90px; padding:6px; }
+    button { padding:8px 12px; }
+    #charts { display:flex; gap:20px; align-items:flex-start; }
+    .chartBox { display:flex; flex-direction:column; align-items:center; }
+    .label { font-weight:600; margin-bottom:6px; }
+    canvas { background:#fff; border:1px solid #ddd; }
+    #note { margin-top:10px; color:#444; font-size:0.9em; }
+  </style>
 </head>
 <body>
+  <h1>Success Trajectories Chart</h1>
 
-    <div class="controls">
-        Number of trials (max 20 to plot all trajectories properly): <input type="number" id="nInput" value="10" min="1" max="10000">
-        Probability of success for each trial: <input type="number" id="pInput" value="0.5" step="0.01" min="0" max="1">
+  <div class="controls">
+    <label>n: <input id="nInput" type="number" min="1" value="10"></label>
+    <label>p: <input id="pInput" type="number" step="0.01" min="0" max="1" value="0.5"></label>
 
-        <br><br>
-        <button id="plotSingleBtn">Plot single trajectory</button>
-        <button id="plotAllBtn">Plot all trajectories</button>
-        <button id="clearBtn">Clear chart</button>
+    <button id="plotSingleBtn">Plot single trajectory</button>
+    <button id="plotAllBtn">Plot all trajectories</button>
+    <button id="resetBtn">Reset</button>
+
+    <div style="margin-left:12px; font-size:0.9em; color:#333;">
+      Right chart = distribution of final successes Xₙ (0..n). After “Plot all”, plotting is disabled until Reset.
+    </div>
+  </div>
+
+  <div id="charts">
+    <div class="chartBox" style="width:720px;">
+      <div class="label">Trajectory Graph</div>
+      <canvas id="trajChart" width="700" height="480"></canvas>
     </div>
 
-    <div id="chartsContainer">
-        <div class="chartWrapper">
-            <div class="chartLabel">Trajectory Graph</div>
-            <canvas id="chartTraj" width="700" height="500"></canvas>
-        </div>
-
-        <div class="chartWrapper">
-            <div class="chartLabel">Relative Frequency Graph for Each Run</div>
-            <canvas id="chartHist" width="300" height="500"></canvas>
-        </div>
+    <div class="chartBox" style="width:420px;">
+      <div class="label">Final success distribution (Xₙ)</div>
+      <canvas id="histChart" width="400" height="480"></canvas>
     </div>
+  </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="renderer.js"></script>
+  <div id="note"></div>
+
+  <script src="renderer.js"></script>
 </body>
 </html>
-
 
