--- a/index7.html
+++ b/index7.html
@@ -7,13 +7,16 @@
   <!-- Chart.js via CDN -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
-    #charts {
+  #charts {
   display: flex;
   gap: 20px;
   align-items: flex-start;
-  flex-wrap: nowrap;        /* <-- prevents wrapping */
-  min-width: 1100px;        /* <-- forces Google Sites iframe to stay wide */
-    }
+  flex-wrap: nowrap;
+  }
+  .chartBox {
+  flex: 1 1 auto;           /* allow shrinking but not below content size */
+  min-width: 450px;
+  }
     body { font-family: Arial, Helvetica, sans-serif; padding: 14px; }
     h1 { font-size: 20px; margin: 0 0 8px 0; }
     .controls { margin: 8px 0 14px 0; display:flex; gap:12px; align-items:center; flex-wrap:wrap; }
@@ -67,3 +70,4 @@
 </body>
 
 </html>
+
