--- a/index7.html
+++ b/index7.html
@@ -4,22 +4,35 @@
   <meta charset="utf-8" />
   <title>Server Security Random Walk – Histogram</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <!-- Chart.js via CDN -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
   <style>
     body { font-family: Arial, Helvetica, sans-serif; padding: 14px; }
     h1 { font-size: 20px; margin: 0 0 8px 0; }
     .controls { margin: 8px 0 14px 0; display:flex; gap:12px; align-items:center; flex-wrap:wrap; }
-    input[type=number] { width:100px; padding:6px; }
+    input[type=number] { width:90px; padding:6px; }
     button { padding:8px 12px; }
-    #charts { display:flex; gap:20px; align-items:flex-start; flex-wrap:wrap; }
-    .chartBox { display:flex; flex-direction:column; align-items:center; }
-    .label { font-weight:600; margin-bottom:6px; }
-    canvas { background:#fff; border:1px solid #ddd; }
+    
+    /* ✅ NEW: charts fit side-by-side even in Google Sites */
+    #charts {
+      display: flex;
+      gap: 16px;
+      align-items: flex-start;
+      flex-wrap: nowrap;
+    }
+    .chartBox {
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+    }
+    canvas {
+      background:#fff;
+      border:1px solid #ddd; /* keep border */
+    }
     #note { margin-top:10px; color:#444; font-size:0.9em; }
-    .error { color:#b00020; font-weight:600; }
   </style>
 </head>
+
 <body>
   <h1>Server Security Random Walk</h1>
 
@@ -43,22 +56,27 @@
   </div>
 
   <div id="charts">
-    <div class="chartBox" style="width:720px;">
+
+    <div class="chartBox" style="width:560px;">
       <div class="label">Sample random-walk trajectories (cumulative score)</div>
-      <canvas id="trajChart" width="700" height="480"></canvas>
+      <!-- ✅ Reduced size -->
+      <canvas id="trajChart" width="550" height="360"></canvas>
     </div>
 
-    <div class="chartBox" style="width:520px;">
+    <div class="chartBox" style="width:420px;">
       <div class="label">Final score histogram (S ∈ {−n, −n+2, …, +n})</div>
-      <canvas id="histChart" width="500" height="480"></canvas>
+      <!-- ✅ Reduced size -->
+      <canvas id="histChart" width="400" height="360"></canvas>
     </div>
+
   </div>
 
   <div id="note"></div>
 
   <script src="renderer7.js"></script>
 </body>
-
 </html>
+
+
 
 
